# django-periodic-tasks

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  mise.toml  mkdocs.yml  pyproject.toml  renovate.json  tox.ini
django_periodic_tasks/: __init__.py  admin.py  apps.py  compat.py  conf.py  cron.py  decorators.py  enqueue.py  models.py  registry.py  scheduler.py  sync.py  task_resolver.py
django_periodic_tasks/management/commands/: run_scheduler.py  scheduler_db_worker.py
django_periodic_tasks/migrations/: 0001_initial.py  0002_remove_redundant_next_run_at_db_index.py  0002_taskexecution_dispatch_marker.py  0003_add_task_execution.py
docs/: index.md
docs/api/: .pages  decorators.md  models.md  registry.md  settings.md
docs/guides/: .pages  defining-schedules.md  exactly-once.md  getting-started.md  running.md
sandbox/: manage.py  settings.py  settings_docgen.py  type_checking.py
sandbox/testapp/: apps.py  tasks.py
tests/: test_admin.py  test_apps.py  test_commands.py  test_cron.py  test_decorators.py  test_enqueue.py  test_integration.py  test_models.py  test_registry.py  test_scheduler.py  test_sync.py  test_task_resolver.py  test_type_checking.py
